--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -94,6 +94,10 @@ description='''${mod_description}'''
 [[mixins]]
     config="mixins.${mod_id}.json"
 
+# In neoforge.mods.toml:
+[[accessTransformers]]
+    file="META-INF/accesstransformer.cfg"
+
 # Features are specific properties of the game environment, that you may want to declare you require. This example declares
 # that your mod requires GL version 3.2 or higher. Other features will be added. They are side aware so declaring this won't
 # stop your mod loading on the server for example.
