--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,16 @@
 
 public net.minecraft.client.renderer.entity.EntityRenderDispatcher renderers # Ljava.util.Map
+
+public net.minecraft.client.renderer.entity.layers.HumanoidArmorLayer renderModel(Lcom/mojang/blaze3d/vertex/PoseStack;Lnet/minecraft/client/renderer/MultiBufferSource;ILnet/minecraft/client/model/HumanoidModel;ILnet/minecraft/resources/ResourceLocation;)V # renderModel
+
+public net.minecraft.client.renderer.entity.layers.HumanoidArmorLayer renderModel(Lcom/mojang/blaze3d/vertex/PoseStack;Lnet/minecraft/client/renderer/MultiBufferSource;ILnet/minecraft/client/model/Model;ILnet/minecraft/resources/ResourceLocation;)V # renderModel
+
+public net.minecraft.client.renderer.entity.layers.HumanoidArmorLayer renderArmorPiece(Lcom/mojang/blaze3d/vertex/PoseStack;Lnet/minecraft/client/renderer/MultiBufferSource;Lnet/minecraft/world/entity/LivingEntity;Lnet/minecraft/world/entity/EquipmentSlot;ILnet/minecraft/client/model/HumanoidModel;)V # renderArmorPiece
+
+public net.minecraft.client.renderer.entity.layers.HumanoidArmorLayer renderArmorPiece(Lcom/mojang/blaze3d/vertex/PoseStack;Lnet/minecraft/client/renderer/MultiBufferSource;Lnet/minecraft/world/entity/LivingEntity;Lnet/minecraft/world/entity/EquipmentSlot;ILnet/minecraft/client/model/HumanoidModel;FFFFFF)V # renderArmorPiece
+
+public net.minecraft.client.renderer.entity.layers.HumanoidArmorLayer getArmorModel(Lnet/minecraft/world.entity/EquipmentSlot;)Lnet/minecraft/client/model/HumanoidModel;
+
+public-f net.minecraft.client.renderer.entity.layers.HorseArmorLayer model # Lnet/minecraft/client/model/HorseModel
+
+public net.minecraft.world.item.ArmorMaterial.Layer dyeable # Boolean
